# game-of-life-python

./: README.md  cell.py  color.py  constants.py  game.py  game_of_life.py  game_states.py  main.py  pyproject.toml  requirements.txt  settings.py  structure.py  structure_reader.py
game_of_life/: cell.py  file_manager.py  game.py  game_of_life.py  game_states.py  grid.py  grid_object.py  main.py  run.py  settings.py
game_of_life/gui/: game_window.py  ui.py
game_of_life/reader/: readers.py
game_of_life/writer/: writers.py
gui/: gui.py  ui.py
reader/: readers.py
